# wasm-bindgen-hs

./: .gitignore  .gitmodules  README.md  TODO.md  cabal.project  flake.nix  wasm-bindgen-hs.cabal
cabal-npm/: LICENSE  cabal-npm.cabal
cabal-npm/src/: Main.hs  Pack.hs  Runtime.hs
example/: Lib.hs  demo.html  package-lock.json  package.json  test.mts  tsconfig.json
src/: Lib.hs
src/TS/: AST.hs  Serialize.hs
src/Wasm/: Export.hs
test/: Test.hs
