cabal-version: 3.0
name: wasm-bindgen-hs
version: 0.1.0.0
license-file: LICENSE
author: George Thomas
maintainer: georgefsthomas@gmail.com

common common
    default-language: GHC2024
    default-extensions:
        BlockArguments
        DerivingStrategies
        DerivingVia
        DuplicateRecordFields
        LexicalNegation
        MultilineStrings
        NamedFieldPuns
        NegativeLiterals
        NoFieldSelectors
        NoMonomorphismRestriction
        OrPatterns
        OverloadedLabels
        OverloadedRecordDot
        PartialTypeSignatures
        RecordWildCards
        ViewPatterns
    ghc-options:
        -threaded
        -Wall
    build-depends:
        base >=4.14,
        template-haskell,

library
    import: common
    hs-source-dirs: src
    exposed-modules:
        Lib

test-suite tests
    hs-source-dirs: test
    main-is: Test.hs
    type: exitcode-stdio-1.0
