cabal-version: 3.0
name: wasm-bindgen-hs
version: 0.1.0.0
license-file: LICENSE
author: George Thomas
maintainer: georgefsthomas@gmail.com

common common
    default-language: GHC2024
    default-extensions:
        BlockArguments
        DerivingStrategies
        DerivingVia
        DuplicateRecordFields
        LexicalNegation
        MultilineStrings
        NamedFieldPuns
        NegativeLiterals
        NoFieldSelectors
        NoMonomorphismRestriction
        OrPatterns
        OverloadedLabels
        OverloadedRecordDot
        OverloadedStrings
        PartialTypeSignatures
        RecordWildCards
        TemplateHaskell
        ViewPatterns
    ghc-options:
        -Wall
    build-depends:
        aeson,
        base >=4.14,
        bytestring,
        ghc-experimental,
        template-haskell,
        text,
        th-utilities,
        time,
        vector,
        vector-stream,
    if os(wasi)
        build-depends:
            canary,
    else
        ghc-options:
            -threaded

library
    import: common
    hs-source-dirs: src
    exposed-modules:
        Wasm.Export

test-suite tests
    import: common
    hs-source-dirs: test
    main-is: Test.hs
    type: exitcode-stdio-1.0
    build-depends:
        wasm-bindgen-hs,
