cabal-version: 3.0
-- Named so that the executable component, when on PATH, can be invoked as
-- `cabal npm` via cabal's external command system.
name: cabal-npm
version: 0.1.0.0
license-file: LICENSE
author: George Thomas
maintainer: georgefsthomas@gmail.com

executable cabal-npm
    default-language: GHC2024
    default-extensions:
        BlockArguments
        DerivingStrategies
        DuplicateRecordFields
        NamedFieldPuns
        NoFieldSelectors
        OverloadedRecordDot
        OverloadedStrings
        RecordWildCards
    ghc-options:
        -Wall
        -threaded
    -- The TS modules are compiled from the wasm-bindgen-hs library's source
    -- tree, rather than depended upon, so that this tool can be built
    -- standalone (e.g. packaged by downstream Nix code) without also
    -- packaging the library and its TH-oriented dependencies. This breaks
    -- sdists, but we'll split the TS stuff into its own package before ever
    -- publishing anything (see TODO.md).
    hs-source-dirs: src ../src
    main-is: Main.hs
    other-modules:
        Pack
        Runtime
        TS.AST
        TS.Serialize
    build-depends:
        aeson,
        aeson-pretty,
        base,
        bytestring,
        directory,
        filepath,
        optparse-applicative,
        process,
        temporary,
        text,
